--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <h1 style="color: rgb(65, 65, 126);">BEST SELLERS</h1>
 
       <div class="product-card">
-        <img src="BestSellers/IMG_8690-300x300.jpg.webp" alt="Product Image" class="product-image">
+        <img src="IMG_8690-300x300.jpg.webp" alt="Product Image" class="product-image">
           <div class="product-title">Side Table-ST029</div>
           <p class="original-price">2,090 EGP</p>
           <p class="discounted-price">900 EGP</p>
@@ -153,7 +153,7 @@
       </div>
 
       <div class="product-card">
-        <img src="BestSellers/Tasha-desk-white-300x300.jpg.webp" alt="Product Image" class="product-image">
+        <img src="Tasha-desk-white-300x300.jpg.webp" alt="Product Image" class="product-image">
           <div class="product-title">Small Desk dsk42</div>
           <p class="original-price">1,760 EGP</p>
           <p class="discounted-price">1,340 EGP</p>
@@ -161,7 +161,7 @@
       </div>
 
       <div class="product-card">
-        <img src="BestSellers/Artboard-2-3-2-300x300.png.webp" alt="Product Image" class="product-image">
+        <img src="Artboard-2-3-2-300x300.png.webp" alt="Product Image" class="product-image">
           <div class="product-title">Bathroom Unit BRU007</div>
           <p class="original-price">3,850 EGP</p>
           <p class="discounted-price">3,130 EGP</p>
@@ -169,7 +169,7 @@
       </div>
 
       <div class="product-card">
-        <img src="BestSellers/Artboard-1_1-8-300x300.png.webp" alt="Product Image" class="product-image">
+        <img src="Artboard-1_1-8-300x300.png.webp" alt="Product Image" class="product-image">
           <div class="product-title">Bathroom Unit BRU002</div>
           <p class="original-price">4,620 EGP </p>
           <p class="discounted-price">4,090 EGP</p>
@@ -177,7 +177,7 @@
       </div>
 
       <div class="product-card">
-        <img src="BestSellers/Artboard-2-12-300x300.png.webp" alt="Product Image" class="product-image">
+        <img src="Artboard-2-12-300x300.png.webp" alt="Product Image" class="product-image">
           <div class="product-title">Shoe Racks</div>
           <p class="original-price">2,200 EGP</p>
           <p class="discounted-price">1,950 EGP</p>
@@ -185,7 +185,7 @@
       </div>
 
       <div class="product-card">
-        <img src="BestSellers/Untitled-1-300x300.png.webp" alt="Product Image" class="product-image">
+        <img src="Untitled-1-300x300.png.webp" alt="Product Image" class="product-image">
           <div class="product-title">BASY C Table</div>
           <p class="original-price">990 EGP </p>
           <p class="discounted-price">740 EGP</p>
@@ -193,7 +193,7 @@
       </div>
 
       <div class="product-card">
-        <img src="BestSellers/creativesolutions_15_1024x1024-300x300.webp" alt="Product Image" class="product-image">
+        <img src="creativesolutions_15_1024x1024-300x300.webp" alt="Product Image" class="product-image">
           <div class="product-title">Side Table ST0016</div>
           <p class="original-price">2,200 EGP</p>
           <p class="discounted-price">1,690 EGP</p>
@@ -201,7 +201,7 @@
       </div>
 
       <div class="product-card">
-        <img src="BestSellers/r1001_1-1-300x300.jpg.webp" alt="Product Image" class="product-image">
+        <img src="r1001_1-1-300x300.jpg.webp" alt="Product Image" class="product-image">
           <div class="product-title">DECAF table</div>
           <p class="original-price">4,460 EGP </p>
           <p class="discounted-price">1,790 EGP</p>
@@ -209,7 +209,7 @@
       </div>
 
       <div class="product-card">
-        <img src="BestSellers/SKU-06-劳伦白金直径70＋50金色脚-300x300.png.webp" alt="Product Image" class="product-image">
+        <img src="SKU-06-劳伦白金直径70＋50金色脚-300x300.png.webp" alt="Product Image" class="product-image">
           <div class="product-title">Coffee Table CT003</div>
           <p class="original-price">3,960 EGP</p>
           <p class="discounted-price">2,190 EGP</p>
@@ -217,7 +217,7 @@
       </div>
 
       <div class="product-card">
-        <img src="BestSellers/grad-desk-large-in.png.webp" alt="Product Image" class="product-image">
+        <img src="grad-desk-large-in.png.webp" alt="Product Image" class="product-image">
           <div class="product-title">GRAD Large Desk</div>
           <p class="original-price">2,580 EGP</p>
           <p class="discounted-price">1,900 EGP</p>
@@ -225,7 +225,7 @@
       </div>
 
       <div class="product-card">
-        <img src="BestSellers/720A1232-copy-scaled-300x300.jpg.webp" alt="Product Image" class="product-image">
+        <img src="720A1232-copy-scaled-300x300.jpg.webp" alt="Product Image" class="product-image">
           <div class="product-title">MAVY Desk </div>
           <p class="original-price">2,530 EGP</p>
           <p class="discounted-price">1,990 EGP</p>
@@ -233,7 +233,7 @@
       </div>
 
       <div class="product-card">
-        <img src="BestSellers/Untitled-1-7-300x300.png.webp" alt="Product Image" class="product-image">
+        <img src="Untitled-1-7-300x300.png.webp" alt="Product Image" class="product-image">
           <div class="product-title">FOBLA Side Table</div>
           <p class="original-price"> 2,200 EGP </p>
           <p class="discounted-price"> 1,640 EGP</p>
@@ -241,7 +241,7 @@
       </div>
 
       <div class="product-card">
-        <img src="BestSellers/MAVY-desk1-300x300.png.webp" alt="Product Image" class="product-image">
+        <img src="MAVY-desk1-300x300.png.webp" alt="Product Image" class="product-image">
           <div class="product-title">COVO Desk With Storage</div>
           <p class="original-price">   4,510 EGP  </p>
           <p class="discounted-price">  3,840 EGP</p>
@@ -250,7 +250,7 @@
       
    
       <div class="product-card">
-        <img src="BestSellers/720A2588-W-scaled-300x300.jpg.webp" alt="Product Image" class="product-image">
+        <img src="720A2588-W-scaled-300x300.jpg.webp" alt="Product Image" class="product-image">
           <div class="product-title">COMFY C Table</div>
           <p class="original-price">990 EGP</p>
           <p class="discounted-price">730 EGP</p>
@@ -258,7 +258,7 @@
       </div>
 
       <div class="product-card">
-        <img src="BestSellers/tvn1002_1_2-300x300.jpg.webp" alt="Product Image" class="product-image">
+        <img src="tvn1002_1_2-300x300.jpg.webp" alt="Product Image" class="product-image">
           <div class="product-title">TV Unit TU001</div>
           <p class="original-price">2,310 EGP</p>
           <p class="discounted-price">1,290 EGP</p>
@@ -271,18 +271,18 @@
 <div style="text-align: center; padding: 40px;">
 
   <div class="intro-card">
-    <img src="BestSellers/Artboard-17-5.png.webp" alt="intro_ Image" class="fo_image">
+    <img src="Artboard-17-5.png.webp" alt="intro_ Image" class="fo_image">
   </div>
 
   <div class="intro-card">
-    <img src="BestSellers/q.png.webp" alt="intro_Image" class="fo_image">
+    <img src="q.png.webp" alt="intro_Image" class="fo_image">
   </div>
 
 
 </div>
 
 <div>
-  <img src="BestSellers/Screenshot 2023-12-11 175210.png" alt="" width="100%">
+  <img src="Screenshot 2023-12-11 175210.png" alt="" width="100%">
 </div>
 
 
